Fix `z-index`. Improve UI

--- a/styles/base/WideImage.module.css
+++ b/styles/base/WideImage.module.css
@@ -2,10 +2,16 @@
 
 .imageWrapper {
   position: relative;
-  z-index: -1;
 
   width: 100%;
   height: 75vh;
+}
+
+@media (max-width: 30rem) {
+  .imageWrapper {
+    height: auto;
+    aspect-ratio: 0.75;
+  }
 }
 
 .image {
