--- a/styles/projects/ProjectPreview.module.css
+++ b/styles/projects/ProjectPreview.module.css
@@ -20,9 +20,6 @@
   aspect-ratio: 1;
 
   position: relative;
-  /* I don't know why the image overlaps the navigation bar
-     and menu, but this line of code helps to fix that */
-  z-index: -1;
 }
 
 .projectImage {
